examples/test/testpolicy12294.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy12294
  namespace: namespace348
spec:
  podSelector:
    matchLabels:
      key30: value31
      key38: value12
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key11: value39
          key4: value40
          key26: value45
      podSelector:
        matchLabels:
          key32: value5
